--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,3 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 @import "tailwindcss";
+
+@theme {
+  --font-roboto: "Roboto", sans-serif; 
+}
